initial implementation, js and additional less structure added

--- a/style/less/layout.less
+++ b/style/less/layout.less
@@ -1,20 +1,19 @@
-.page {
+#main-page {
     position: absolute;
     top: 0;
     left:0;
     width: 100%;
     height: 100%;
-
-    background: red;
 }
-.menu{
+
+#main-menu{
+    position: relative;
     float: left;
     width: 200px;
     height: 100%;
-    background: #C8FC98;
 }
-.content-wrapper {
-    background: silver;
+
+#content-wrapper {
     height: 100%;
     margin-left: 200px;
 }
