--- a/style/less/main.less
+++ b/style/less/main.less
@@ -1,8 +1,18 @@
-@import 'colors';
-@import 'utils';
-@import 'layout';
+@import 'vars/colors';
+@import 'vars/box';
 
-body{
-    background: red;
-    color: white;
+@import 'utils/mixins';
+@import 'utils/basics';
+
+@import 'layout';
+@import 'menu';
+@import 'content';
+
+body {
+    font-family: 'Raleway', sans;
+
+    margin: 0;
+    padding: 0;
+    outline: none;
+    background-color: #F6F6F6;
 }
