--- a/style/main.css
+++ b/style/main.css
@@ -1,23 +1,187 @@
-.page {
+.button {
+  background-color: #333647;
+  border: none;
+  outline: none;
+  box-shadow: none;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  color: #fff;
+  padding: 3px;
+  cursor: pointer;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+}
+.button:hover {
+  background-color: #5e6382;
+  -webkit-box-shadow: 0px 0px 4px 0px #333647 inset;
+  -moz-box-shadow: 0px 0px 4px 0px #333647 inset;
+  box-shadow: 0px 0px 4px 0px #333647 inset;
+}
+#main-page {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: red;
 }
-.menu {
+#main-menu {
+  position: relative;
   float: left;
   width: 200px;
   height: 100%;
-  background: #C8FC98;
 }
-.content-wrapper {
-  background: silver;
+#content-wrapper {
   height: 100%;
   margin-left: 200px;
 }
+#main-menu {
+  background: #323544;
+  padding-top: 60px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: -moz- none;
+  -o-user-select: none;
+  user-select: none;
+}
+#main-menu #menu-header,
+#main-menu #menu-footer {
+  position: absolute;
+  width: 100%;
+  padding: 10px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+#main-menu #menu-header {
+  top: 0;
+  height: 60px;
+  background: ;
+}
+#main-menu #menu-footer {
+  bottom: 0;
+  height: 60px;
+  background: #666666;
+}
+#main-menu #menu-items {
+  color: #9898a0;
+  text-transform: uppercase;
+  font-size: 14pt;
+  font-weight: bold;
+}
+#main-menu #menu-items ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+#main-menu #menu-items ul .menu-item {
+  position: relative;
+  padding-left: 40px;
+  height: 60px;
+  line-height: 60px;
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -ms-transition: 0.4s;
+  -o-transition: 0.4s;
+}
+#main-menu #menu-items ul .menu-item .menu-item-icon {
+  display: inline-block;
+  position: absolute;
+  top: 4px;
+  left: 10px;
+  vertical-align: middle;
+  width: 22px;
+  height: 22px;
+  fill: #9898a0;
+}
+#main-menu #menu-items ul .menu-item a {
+  text-decoration: none;
+  color: inherit;
+}
+#main-menu #menu-items ul .menu-item:hover {
+  background-color: #484b5e;
+  cursor: pointer;
+}
+#main-menu #menu-items ul .menu-item:hover,
+#main-menu #menu-items ul .menu-item.selected {
+  color: #fff;
+}
+#main-menu #menu-items ul .menu-item:hover .menu-item-icon,
+#main-menu #menu-items ul .menu-item.selected .menu-item-icon {
+  fill: #55ACC0;
+}
+#main-menu #menu-items ul .menu-item.selected {
+  background: #1e202c;
+}
+#main-menu #menu-items ul .menu-item.selected:before {
+  content: ' ';
+  position: absolute;
+  top: 21px;
+  right: -16px;
+  border: solid 8px rgba(0, 0, 0, 0);
+  border-left-color: #1e202c;
+  background: none;
+}
+#content-wrapper {
+  color: #222;
+}
+#content-wrapper #content-header {
+  height: 60px;
+  overflow: hidden;
+  background: #ffffff;
+}
+#content-wrapper #content-header .button {
+  position: relative;
+  margin: 10px;
+  float: right;
+}
+#content-wrapper #content-header .button .button-icon {
+  display: inline-block;
+  position: absolute;
+  top: 10px;
+  left: 12px;
+  width: 14px;
+  height: 14px;
+  fill: #fff;
+}
+#content-wrapper #content-header #button-add {
+  padding: 8px 14px 8px 30px;
+  text-transform: uppercase;
+  font-weight: bold;
+  line-height: 2em;
+}
+#content-wrapper #content {
+  padding: 20px;
+  font-size: 16pt;
+}
+#content-wrapper #content #expence-list {
+  max-width: 800px;
+  margin: 0 auto;
+}
+#content-wrapper #content #expence-list tr:nth-child(odd) {
+  background: #fcfcfc;
+}
+#content-wrapper #content #expence-list .expence-item {
+  padding: 10px 0;
+}
+#content-wrapper #content #expence-list .expence-item td {
+  padding: 10px 5px;
+}
+#content-wrapper #content #expence-list .expence-item .amount {
+  font-size: 24pt;
+}
 body {
-  background: red;
-  color: white;
+  font-family: 'Raleway', sans;
+  margin: 0;
+  padding: 0;
+  outline: none;
+  background-color: #F6F6F6;
 }
