--- a/style/less/vars/colors.less
+++ b/style/less/vars/colors.less
@@ -1,3 +1,7 @@
+@color-button-background: #323544;
+@color-button-background-hover: lighten(@color-button-background, 10%);
+@color-button-text: #fff;
+
 //menu colors
 @color-menu-background: #323544;
 @color-menu-header-background: ;
