menu arrow changed direction

--- a/style/less/menu.less
+++ b/style/less/menu.less
@@ -74,11 +74,11 @@
                     &:before {
                         content: ' ';
                         position: absolute;
-                        top: 21px;
-                        right: -16px;
+                        top: 18px;
+                        right: 0;
 
-                        border: solid 8px rgba(0,0,0,0);
-                        border-left-color: @color-menu-selected;
+                        border: solid 12px rgba(0,0,0,0);
+                        border-right-color: #F6F6F6;
                         background: none;
                     }
                 }
