--- a/style/main.css
+++ b/style/main.css
@@ -137,10 +137,10 @@
 #main-menu #menu-items ul .menu-item.selected:before {
   content: ' ';
   position: absolute;
-  top: 21px;
-  right: -16px;
-  border: solid 8px rgba(0, 0, 0, 0);
-  border-left-color: #1e202c;
+  top: 18px;
+  right: 0;
+  border: solid 12px rgba(0, 0, 0, 0);
+  border-right-color: #F6F6F6;
   background: none;
 }
 #expence-list {
