--- a/style/less/menu.less
+++ b/style/less/menu.less
@@ -29,7 +29,7 @@
         font-size: 14pt;
         font-weight: bold;
 
-        ul {
+        menu {
             list-style: none;
             padding: 0;
             margin: 0;
@@ -53,6 +53,9 @@
                 }
 
                 a {
+                    position: absolute;
+
+                    height: 100%;
                     text-decoration: none;
                     color: inherit;
                 }
