added AMD structure

--- a/style/less/categories.less
+++ b/style/less/categories.less
@@ -1,3 +1,36 @@
 #categories {
     display: none;
+    max-width: 800px;
+    margin: 0 auto;
+
+    .category-item {
+        padding: 10px 0;
+
+        &:nth-child(odd) {
+            background-color: #fcfcfc;
+        }
+
+        &:hover {
+            .delete {
+                opacity: 1;
+            }
+        }
+
+        td {
+            padding: 10px 5px;
+        }
+
+        .delete {
+            opacity: 0;
+
+            .button{
+                background-color: #E9545A;
+
+                &:hover {
+                    background-color: lighten(#E9545A, 10%);
+                    box-shadow: none;
+                }
+            }
+        }
+    }
 }
