--- a/style/less/content.less
+++ b/style/less/content.less
@@ -22,5 +22,20 @@
         .box-sizing(border-box);
         height: calc(~"100% - " @content-header-height);
         overflow: auto;
+
+        &::-webkit-scrollbar {
+            width: 12px;
+        }
+        &::-webkit-scrollbar-track {
+            background-color: #dedede;
+        }
+        &::-webkit-scrollbar-thumb {
+            background-color: #bbb;
+        }
+        &::-webkit-scrollbar-thumb:hover {
+            background-color: #999;
+        }
     }
 }
+
+
