--- a/style/main.css
+++ b/style/main.css
@@ -225,6 +225,18 @@
   height: calc(100% -  60px);
   overflow: auto;
 }
+#content-wrapper #content::-webkit-scrollbar {
+  width: 12px;
+}
+#content-wrapper #content::-webkit-scrollbar-track {
+  background-color: #dedede;
+}
+#content-wrapper #content::-webkit-scrollbar-thumb {
+  background-color: #bbb;
+}
+#content-wrapper #content::-webkit-scrollbar-thumb:hover {
+  background-color: #999;
+}
 body {
   font-family: 'Raleway', sans;
   margin: 0;
