--- a/style/less/main.less
+++ b/style/less/main.less
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,700);
+
 @import 'vars/colors';
 @import 'vars/box';
 
@@ -9,7 +11,7 @@
 @import 'content';
 
 body {
-    font-family: 'Raleway', sans;
+    font-family: 'Raleway', sans-serif;
 
     margin: 0;
     padding: 0;
