--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,700);
 .button {
   position: relative;
   background-color: #323544;
@@ -238,7 +239,7 @@
   background-color: #999;
 }
 body {
-  font-family: 'Raleway', sans;
+  font-family: 'Raleway', sans-serif;
   margin: 0;
   padding: 0;
   outline: none;
