added proper categories rendering and generation

--- a/style/less/categories.less
+++ b/style/less/categories.less
@@ -20,6 +20,10 @@
             padding: 10px 5px;
         }
 
+        .color {
+            text-align: center;
+        }
+
         .delete {
             opacity: 0;
 
@@ -33,4 +37,13 @@
             }
         }
     }
+}
+
+.category-icon {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    border: solid 4px #fff;
+    .border-radius(4px);
+    .box-shadow(0 0 5px #ccc);
 }
