--- a/style/less/main.less
+++ b/style/less/main.less
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Raleway:400,700);
+//@import url(http://fonts.googleapis.com/css?family=Raleway:400,700);
 
 @import 'vars/colors';
 @import 'vars/box';
@@ -18,4 +18,42 @@ body {
     outline: none;
     background-color: #F6F6F6;
     overflow: hidden;
+}
+
+// tooltips
+*[data-title] {
+    position: relative;
+
+    &:after, &:before {
+        opacity: 0;
+        font-family: Helvetica, Arial, sans-serif;
+        font-size: 12pt;
+
+        .transition(.2s);
+    }
+
+    &:after {
+        content: attr(data-title);
+        position: absolute;
+        top: -31px;
+        left: 2px;
+        background: rgba(0,0,0,.7);
+        color: #fff;
+        padding: 2px 4px;
+        white-space: nowrap;
+        border-radius: 2px;
+    }
+
+    &:before {
+        content: ' ';
+        position: absolute;
+        top: -8px;
+        border: solid 6px rgba(0,0,0,0);
+        left: 6px;
+        border-top-color: rgba(0,0,0,.7);
+    }
+
+    &:hover:after, &:hover:before {
+        opacity: 1;
+    };
 }
