--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Raleway:400,700);
 .button {
   position: relative;
   background-color: #323544;
@@ -263,4 +262,40 @@ body {
   outline: none;
   background-color: #F6F6F6;
   overflow: hidden;
+}
+*[data-title] {
+  position: relative;
+}
+*[data-title]:after,
+*[data-title]:before {
+  opacity: 0;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 12pt;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -ms-transition: 0.2s;
+  -o-transition: 0.2s;
+}
+*[data-title]:after {
+  content: attr(data-title);
+  position: absolute;
+  top: -31px;
+  left: 2px;
+  background: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  padding: 2px 4px;
+  white-space: nowrap;
+  border-radius: 2px;
+}
+*[data-title]:before {
+  content: ' ';
+  position: absolute;
+  top: -8px;
+  border: solid 6px rgba(0, 0, 0, 0);
+  left: 6px;
+  border-top-color: rgba(0, 0, 0, 0.7);
+}
+*[data-title]:hover:after,
+*[data-title]:hover:before {
+  opacity: 1;
 }
