stupid typo fix

--- a/style/less/expenses.less
+++ b/style/less/expenses.less
@@ -1,8 +1,8 @@
-#expence-list {
+#expense-list {
     max-width: 800px;
     margin: 0 auto;
 
-    .expence-item {
+    .expense-item {
         padding: 10px 0;
 
         &:nth-child(odd) {
