--- a/style/less/vars/box.less
+++ b/style/less/vars/box.less
@@ -5,7 +5,7 @@
 
 //Content
 @content-header-height: @menu-header-height;
-@expence-item-amount-width: 60px;
-@expence-item-category-width: 160px;
-@expence-item-title-width: 160px;
-@expence-item-date-width: 160px;
+@expense-item-amount-width: 60px;
+@expense-item-category-width: 160px;
+@expense-item-title-width: 160px;
+@expense-item-date-width: 160px;
