--- a/style/less/main.less
+++ b/style/less/main.less
@@ -1,4 +1,4 @@
-//@import url(http://fonts.googleapis.com/css?family=Raleway:400,700);
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,700);
 
 @import 'vars/colors';
 @import 'vars/box';
