--- a/style/less/main.less
+++ b/style/less/main.less
@@ -25,9 +25,11 @@ body {
     position: relative;
 
     &:after, &:before {
+        visibility: hidden;
         opacity: 0;
         font-family: Helvetica, Arial, sans-serif;
         font-size: 12pt;
+        bottom: 100%;
 
         .transition(.2s);
     }
@@ -35,8 +37,8 @@ body {
     &:after {
         content: attr(data-title);
         position: absolute;
-        top: -31px;
         left: 2px;
+        margin-bottom: 12px;
         background: rgba(0,0,0,.7);
         color: #fff;
         padding: 2px 4px;
@@ -47,13 +49,13 @@ body {
     &:before {
         content: ' ';
         position: absolute;
-        top: -8px;
-        border: solid 6px rgba(0,0,0,0);
         left: 6px;
+        border: solid 6px transparent;
         border-top-color: rgba(0,0,0,.7);
     }
 
     &:hover:after, &:hover:before {
+        visibility: visible;
         opacity: 1;
     };
 }
