--- a/style/main.css
+++ b/style/main.css
@@ -269,9 +269,11 @@ body {
 }
 *[data-title]:after,
 *[data-title]:before {
+  visibility: hidden;
   opacity: 0;
   font-family: Helvetica, Arial, sans-serif;
   font-size: 12pt;
+  bottom: 100%;
   -webkit-transition: 0.2s;
   -moz-transition: 0.2s;
   -ms-transition: 0.2s;
@@ -280,8 +282,8 @@ body {
 *[data-title]:after {
   content: attr(data-title);
   position: absolute;
-  top: -31px;
   left: 2px;
+  margin-bottom: 12px;
   background: rgba(0, 0, 0, 0.7);
   color: #fff;
   padding: 2px 4px;
@@ -291,12 +293,12 @@ body {
 *[data-title]:before {
   content: ' ';
   position: absolute;
-  top: -8px;
-  border: solid 6px rgba(0, 0, 0, 0);
   left: 6px;
+  border: solid 6px transparent;
   border-top-color: rgba(0, 0, 0, 0.7);
 }
 *[data-title]:hover:after,
 *[data-title]:hover:before {
+  visibility: visible;
   opacity: 1;
 }
