reworked to Marionette, initial commit

--- a/style/less/categories.less
+++ b/style/less/categories.less
@@ -1,7 +1,9 @@
-#categories {
-    display: none;
+#category-list {
+    width: 80%;
     max-width: 800px;
     margin: 0 auto;
+    border-spacing: 0;
+    border-collapse: collapse;
 
     .category-item {
         padding: 10px 0;
