--- a/style/less/expenses.less
+++ b/style/less/expenses.less
@@ -1,6 +1,9 @@
 #expense-list {
+    width: 80%;
     max-width: 800px;
     margin: 0 auto;
+    border-spacing: 0;
+    border-collapse: collapse;
 
     .expense-item {
         padding: 10px 0;
