--- a/style/less/menu.less
+++ b/style/less/menu.less
@@ -54,8 +54,12 @@
 
                 a {
                     position: absolute;
-
                     height: 100%;
+                    width: 100%;
+                    top: 0;
+                    left: 0;
+                    padding-left: 40px;
+                    box-sizing: border-box;
                     text-decoration: none;
                     color: inherit;
                 }
