--- a/style/less/categories.less
+++ b/style/less/categories.less
@@ -2,32 +2,44 @@
     width: 80%;
     max-width: 800px;
     margin: 0 auto;
+    padding: 0;
+    list-style: none;
     border-spacing: 0;
     border-collapse: collapse;
 
     .category-item {
-        padding: 10px 0;
+        position: relative;
+        width: 100%;
+        padding: 10px;
 
         &:nth-child(odd) {
             background-color: #fcfcfc;
         }
 
         &:hover {
+            .box-shadow(0px 0px 5px 1px #ccc);
+            background: #fff;
+            z-index: 2;
             .delete {
                 opacity: 1;
             }
         }
 
-        td {
+        & > div {
+            display: inline-block;
+            vertical-align: middle;
             padding: 10px 5px;
         }
 
         .color {
             text-align: center;
+            padding: 0 5px;
         }
 
         .delete {
             opacity: 0;
+            float: right;
+            padding: 0;
 
             .button{
                 background-color: #E9545A;
