--- a/style/main.css
+++ b/style/main.css
@@ -187,26 +187,42 @@
   width: 80%;
   max-width: 800px;
   margin: 0 auto;
+  padding: 0;
+  list-style: none;
   border-spacing: 0;
   border-collapse: collapse;
 }
 #category-list .category-item {
-  padding: 10px 0;
+  position: relative;
+  width: 100%;
+  padding: 10px;
 }
 #category-list .category-item:nth-child(odd) {
   background-color: #fcfcfc;
 }
+#category-list .category-item:hover {
+  -webkit-box-shadow: 0px 0px 5px 1px #cccccc;
+  -moz-box-shadow: 0px 0px 5px 1px #cccccc;
+  box-shadow: 0px 0px 5px 1px #cccccc;
+  background: #fff;
+  z-index: 2;
+}
 #category-list .category-item:hover .delete {
   opacity: 1;
 }
-#category-list .category-item td {
+#category-list .category-item > div {
+  display: inline-block;
+  vertical-align: middle;
   padding: 10px 5px;
 }
 #category-list .category-item .color {
   text-align: center;
+  padding: 0 5px;
 }
 #category-list .category-item .delete {
   opacity: 0;
+  float: right;
+  padding: 0;
 }
 #category-list .category-item .delete .button {
   background-color: #E9545A;
