--- a/style/less/expences.less
+++ b/style/less/expences.less
@@ -1,11 +1,12 @@
-@import 'bootstrap';
-
 #expence-list {
-    max-width: 800px;
+    // max-width: 800px;
     margin: 0 auto;
-
+    
     .expence-item {
-        padding: 10px 0;
+        padding: 10px 5px;
+        display: inline-block;
+        width: 45%;
+        height: 280px;
 
         &:nth-child(odd) {
             background-color: #fcfcfc;
@@ -16,32 +17,68 @@
                 opacity: 1;
             }
         }
-
-        td {
-            padding: 10px 5px;
-        }
-
         .amount {
-            font-size: 24pt;
+            width: 50%;
+            font-size: 2.5em;
+            float: left;
         }
+        .category {
+            float: left;
+            width: 35%;
+            height: 45%;
+            margin: -10px 10px 0 0;
+            border: 1px solid red;
+        }
+        .options-wrapper{
+            float: right;
+            width: 10%;
+            height: 30px;
+            overflow: hidden;
+            
+            &:hover{
+                height: auto;
+                overflow: visible;
+            }
 
-        .category {}
-
-        .title {}
-
-        .date {}
-
-        .delete {
-            opacity: 0;
-
-            .button{
-                background-color: #E9545A;
-
-                &:hover {
-                    background-color: lighten(#E9545A, 10%);
-                    box-shadow: none;
+            .arrow{
+                &.down{
+                    width: 0;
+                    height: 0;
+                    border-left: 15px solid transparent;
+                    border-right: 15px solid transparent;
+                    border-top: 30px solid red;
+                }
+                &.up{
+                    width: 0;
+                    height: 0;
+                    border-left: 15px solid transparent;
+                    border-right: 15px solid transparent;
+                    border-bottom: 30px solid red;
                 }
             }
+            .options{
+                width: 150%;
+                position: relative;
+                top: 5px;
+                left: 10px;
+                border: 1px solid grey;
+                background: #efefef;
+                cursor: default;
+            }
+            .option:hover{
+               background: #ccc;  
+            }
+        }
+        .title{
+            float: left;
+            width: 100%;
+            min-height: 4em;
+        }
+        .date {
+            float: left;
+            width: 100%;
+            bottom: 0;
+            text-align: right;
         }
     }
 }
