--- a/style/less/expences.less
+++ b/style/less/expences.less
@@ -1,24 +1,14 @@
 #expence-list {
-    // max-width: 800px;
-    margin: 0 auto;
-    
     .expence-item {
         padding: 10px 5px;
+        margin: 5px 15px 0 0;
         display: inline-block;
-        width: 45%;
-        height: 280px;
+        width: 360px;
+        height: 200px;
+        background-color: #fcfcfc;
 
-        &:nth-child(odd) {
-            background-color: #fcfcfc;
-        }
-
-        &:hover {
-            .delete {
-                opacity: 1;
-            }
-        }
         .amount {
-            width: 50%;
+            width: 55%;
             font-size: 2.5em;
             float: left;
         }
@@ -27,43 +17,35 @@
             width: 35%;
             height: 45%;
             margin: -10px 10px 0 0;
-            border: 1px solid red;
+            background: orange;
         }
         .options-wrapper{
             float: right;
-            width: 10%;
-            height: 30px;
+            width: 25px;
+            height: 14px;
             overflow: hidden;
-            
+
+            .arrow{
+                width: 0;
+                height: 0;
+                border-left: 10px solid transparent;
+                border-right: 10px solid transparent;
+                border-top: 15px solid grey;
+            }
+
             &:hover{
                 height: auto;
                 overflow: visible;
             }
 
-            .arrow{
-                &.down{
-                    width: 0;
-                    height: 0;
-                    border-left: 15px solid transparent;
-                    border-right: 15px solid transparent;
-                    border-top: 30px solid red;
-                }
-                &.up{
-                    width: 0;
-                    height: 0;
-                    border-left: 15px solid transparent;
-                    border-right: 15px solid transparent;
-                    border-bottom: 30px solid red;
-                }
-            }
             .options{
-                width: 150%;
+                width: 80px;
                 position: relative;
                 top: 5px;
                 left: 10px;
                 border: 1px solid grey;
                 background: #efefef;
-                cursor: default;
+                cursor: pointer;
             }
             .option:hover{
                background: #ccc;  
@@ -73,6 +55,7 @@
             float: left;
             width: 100%;
             min-height: 4em;
+            margin: 0.25em 0;
         }
         .date {
             float: left;
