more semantic structure for views, templates, styles added

--- a/style/less/content.less
+++ b/style/less/content.less
@@ -1,6 +1,6 @@
-@import 'expenses';
-@import 'categories';
-@import 'statistics';
+@import 'expenses/expenses';
+@import 'categories/categories';
+@import 'statistics/statistics';
 
 #content-wrapper {
     color: #222;
