--- a/style/less/categories/categories.less
+++ b/style/less/categories/categories.less
@@ -1,58 +1,74 @@
-#category-list {
-    width: 80%;
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 0;
-    list-style: none;
-    border-spacing: 0;
-    border-collapse: collapse;
+#categories-content {
 
-    .category-item {
-        position: relative;
-        width: 100%;
-        padding: 10px;
+    #add-category-wrapper {
+        clear: both;
+        overflow: auto;
 
-        &:nth-child(odd) {
-            background-color: #fcfcfc;
-        }
-
-        &:hover {
-            .box-shadow(0px 0px 5px 1px #ccc);
-            background: #fff;
-            z-index: 2;
-            .delete {
-                opacity: 1;
-            }
-        }
-
-        & > div {
-            display: inline-block;
-            vertical-align: middle;
-            padding: 10px 5px;
-        }
-
-        .color {
-            text-align: center;
-            padding: 0 5px;
-        }
-
-        .delete {
-            opacity: 0;
+        #button-add-category {
+            margin: 10px;
             float: right;
-            padding: 0;
+        }
 
-            .button{
-                background-color: #E9545A;
+        #add-category-container {}
+    }
 
-                &:hover {
-                    background-color: lighten(#E9545A, 10%);
-                    box-shadow: none;
+    #categories-list {
+        width: 80%;
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 0;
+        list-style: none;
+        border-spacing: 0;
+        border-collapse: collapse;
+
+
+
+        .category-item {
+            position: relative;
+            width: 100%;
+            padding: 10px;
+
+            &:nth-child(odd) {
+                background-color: #fcfcfc;
+            }
+
+            &:hover {
+                .box-shadow(0px 0px 5px 1px #ccc);
+                background: #fff;
+                z-index: 2;
+                .delete {
+                    opacity: 1;
+                }
+            }
+
+            & > div {
+                display: inline-block;
+                vertical-align: middle;
+                padding: 10px 5px;
+            }
+
+            .color {
+                text-align: center;
+                padding: 0 5px;
+            }
+
+            .delete {
+                opacity: 0;
+                float: right;
+                padding: 0;
+
+                .button{
+                    background-color: #E9545A;
+
+                    &:hover {
+                        background-color: lighten(#E9545A, 10%);
+                        box-shadow: none;
+                    }
                 }
             }
         }
     }
 }
-
 .category-icon {
     display: inline-block;
     width: 40px;
