--- a/style/main.css
+++ b/style/main.css
@@ -151,14 +151,32 @@
   border-right-color: #F6F6F6;
   background: none;
 }
-#expense-list {
+#content-header .button {
+  margin: 10px;
+  float: right;
+  background: #DD4B39;
+}
+#content-header .button:hover {
+  -webkit-box-shadow: 0px 0px 4px 0px #dd4b39 inset;
+  -moz-box-shadow: 0px 0px 4px 0px #dd4b39 inset;
+  box-shadow: 0px 0px 4px 0px #dd4b39 inset;
+}
+#expenses-content #add-expense-wrapper {
+  clear: both;
+  overflow: auto;
+}
+#expenses-content #add-expense-wrapper #button-add-expense {
+  margin: 10px;
+  float: right;
+}
+#expenses-content #expenses-list {
   width: 80%;
   max-width: 800px;
   margin: 10px auto;
   border-spacing: 0;
   border-collapse: collapse;
 }
-#expense-list .expense-item {
+#expenses-content #expenses-list .expense-item {
   padding: 10px 15px;
   margin: 5px 0 0 0;
   display: inline-block;
@@ -166,38 +184,38 @@
   height: 200px;
   background-color: #fcfcfc;
 }
-#expense-list .expense-item:nth-child(odd) {
+#expenses-content #expenses-list .expense-item:nth-child(odd) {
   margin-right: 15px;
 }
-#expense-list .expense-item .amount {
+#expenses-content #expenses-list .expense-item .amount {
   width: 55%;
   font-size: 2.5em;
   float: left;
 }
-#expense-list .expense-item .category-icon {
+#expenses-content #expenses-list .expense-item .category-icon {
   float: left;
   width: 30%;
   height: 45%;
   margin: -10px 0 0 0;
 }
-#expense-list .expense-item .options-wrapper {
+#expenses-content #expenses-list .expense-item .options-wrapper {
   float: right;
   width: 25px;
   height: 14px;
   overflow: hidden;
 }
-#expense-list .expense-item .options-wrapper .arrow {
+#expenses-content #expenses-list .expense-item .options-wrapper .arrow {
   width: 0;
   height: 0;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
   border-top: 15px solid grey;
 }
-#expense-list .expense-item .options-wrapper:hover {
+#expenses-content #expenses-list .expense-item .options-wrapper:hover {
   height: auto;
   overflow: visible;
 }
-#expense-list .expense-item .options-wrapper .options {
+#expenses-content #expenses-list .expense-item .options-wrapper .options {
   width: 80px;
   position: relative;
   top: 5px;
@@ -206,25 +224,33 @@
   background: #fcfcfc;
   cursor: pointer;
 }
-#expense-list .expense-item .options-wrapper .option {
+#expenses-content #expenses-list .expense-item .options-wrapper .option {
   padding: 2px 4px;
 }
-#expense-list .expense-item .options-wrapper .option:hover {
+#expenses-content #expenses-list .expense-item .options-wrapper .option:hover {
   background: #efefef;
 }
-#expense-list .expense-item .title {
+#expenses-content #expenses-list .expense-item .title {
   float: left;
   width: 100%;
   min-height: 3em;
   margin: 0.25em 0;
 }
-#expense-list .expense-item .date {
+#expenses-content #expenses-list .expense-item .date {
   float: left;
   width: 100%;
   bottom: 0;
   text-align: right;
 }
-#category-list {
+#categories-content #add-category-wrapper {
+  clear: both;
+  overflow: auto;
+}
+#categories-content #add-category-wrapper #button-add-category {
+  margin: 10px;
+  float: right;
+}
+#categories-content #categories-list {
   width: 80%;
   max-width: 800px;
   margin: 0 auto;
@@ -233,42 +259,42 @@
   border-spacing: 0;
   border-collapse: collapse;
 }
-#category-list .category-item {
+#categories-content #categories-list .category-item {
   position: relative;
   width: 100%;
   padding: 10px;
 }
-#category-list .category-item:nth-child(odd) {
+#categories-content #categories-list .category-item:nth-child(odd) {
   background-color: #fcfcfc;
 }
-#category-list .category-item:hover {
+#categories-content #categories-list .category-item:hover {
   -webkit-box-shadow: 0px 0px 5px 1px #cccccc;
   -moz-box-shadow: 0px 0px 5px 1px #cccccc;
   box-shadow: 0px 0px 5px 1px #cccccc;
   background: #fff;
   z-index: 2;
 }
-#category-list .category-item:hover .delete {
+#categories-content #categories-list .category-item:hover .delete {
   opacity: 1;
 }
-#category-list .category-item > div {
+#categories-content #categories-list .category-item > div {
   display: inline-block;
   vertical-align: middle;
   padding: 10px 5px;
 }
-#category-list .category-item .color {
+#categories-content #categories-list .category-item .color {
   text-align: center;
   padding: 0 5px;
 }
-#category-list .category-item .delete {
+#categories-content #categories-list .category-item .delete {
   opacity: 0;
   float: right;
   padding: 0;
 }
-#category-list .category-item .delete .button {
+#categories-content #categories-list .category-item .delete .button {
   background-color: #E9545A;
 }
-#category-list .category-item .delete .button:hover {
+#categories-content #categories-list .category-item .delete .button:hover {
   background-color: #ef8186;
   box-shadow: none;
 }
@@ -298,12 +324,7 @@
   overflow: hidden;
   background: #ffffff;
 }
-#content-wrapper #content-header .button {
-  margin: 10px;
-  float: right;
-}
 #content-wrapper #content {
-  padding: 20px;
   font-size: 16pt;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
