--- a/style/less/main.less
+++ b/style/less/main.less
@@ -10,6 +10,8 @@
 @import 'menu';
 @import 'content';
 
+@import '../../js/vendor/fancySelect.css';
+
 body {
     font-family: 'Raleway', sans-serif;
 
