--- a/style/less/expenses/expenses.less
+++ b/style/less/expenses/expenses.less
@@ -8,7 +8,22 @@
             float: right;
         }
 
-        #add-expense-container {}
+        #add-expense-container{
+            float: right;
+            margin: 7px 17px 0 0;
+
+            input,
+            select{
+                font-size: 1em;
+                padding: 8px 10px;
+                border: 1px solid lighten(grey, 25%);
+                border-radius: 3px;
+            }
+            input[type=date]{
+                padding: 6px 17px 3px 17px;
+            }
+        }
+
     }
 
     #expenses-list {
